# x-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  clippy.yml  docs.yml  fmt.yml  mutant.yml  release.yml  ruby-lint.yml  ruby-test.yml  test.yml  toolchain-freshness.yml
legacy/: .rubocop.yml  CHANGELOG.md  Gemfile  Rakefile  t.gemspec
legacy/.github/workflows/: ruby.yml
legacy/lib/t/: cli.rb  collectable.rb  collection.rb  delete.rb  list.rb  printable.rb  rcfile.rb  requestable.rb  requestable_api.rb  search.rb  set.rb  stream.rb  utils.rb  version.rb
legacy/lib/t/printable/: messaging.rb  rendering.rb
legacy/lib/t/requestable_api/: account_endpoints.rb  dm_endpoints.rb  dm_helpers.rb  dm_parsing.rb  helpers.rb  http.rb  list_endpoints.rb  list_normalization.rb  mutations.rb  resolution.rb  tweet_endpoints.rb  tweet_normalization.rb  user_endpoints.rb  user_normalization.rb
legacy/tasks/: bash.rake
legacy/test/: test_cli.rb  test_collectable.rb  test_collection.rb  test_delete.rb  test_editor.rb  test_helper.rb  test_list.rb  test_printable.rb  test_rcfile.rb  test_requestable_api.rb  test_search.rb  test_set.rb  test_stream.rb  test_utils.rb
legacy/test/fixtures/: .trc_multi  direct_message_events.json
legacy/test/fixtures/v2/: dm_event.json  dm_events.json  dm_users.json  favorites.json  following_ids.json  list.json  list_following_no_desc.json  lists.json  pengwynn.json  post_response.json  search.json  search_with_entities.json  sferik.json  status.json  status_no_attributes.json  status_no_country.json  status_no_full_name.json  status_no_geo.json  status_no_locality.json  status_no_place.json  status_no_street_address.json  status_no_text.json  status_with_mention.json  statuses.json  trends.json  user_minimal.json  user_no_status.json  user_verified.json  users.json  users_list.json  users_verified_protected.json
legacy/tmp/: authorize
man/: x.1
src/: lib.rs  main.rs  manifest.rs  rcfile.rs  runner.rs
tests/: cli_behavior.rs  compatibility_surface.rs  man_page.rs  parity_fixtures.rs
x-api/: Cargo.toml
x-api/src/: backend.rs  lib.rs  oauth1.rs
