[package]
name = "x"
version = "5.0.0"
edition = "2024"
description = "Rust rewrite of the t Twitter CLI with legacy-compatible command surface"
license = "MIT"

[lib]
name = "x"
path = "src/lib.rs"

[[bin]]
name = "x"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["string"] }
chrono = { version = "0.4.40", default-features = true, features = ["clock"] }
oauth-client = "0.8.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
base64 = "0.22.1"
dirs = "6.0.0"
x-api = { path = "x-api" }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.18.0"

[package.metadata.release]
publish = false
push-remote = "origin"
tag-name = "v{{version}}"
tag-message = "Release {{tag_name}}"
pre-release-hook = ["git", "fetch", "--tags", "--quiet", "origin"]
