[package]
name = "x"
version = "6.0.0"
edition = "2024"
description = "Rust rewrite of the t Twitter CLI with legacy-compatible command surface"
license = "MIT"

[lib]
name = "x"
path = "src/lib.rs"

[[bin]]
name = "x"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["string"] }
chrono = { version = "0.4.44", default-features = true, features = ["clock"] }
oauth-client = "0.8.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_yaml_ng = "0.10"
thiserror = "2.0.18"
base64 = "0.22.1"
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
x-api = { path = "x-api" }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"

[package.metadata.release]
publish = false
push-remote = "origin"
tag-name = "v{{version}}"
tag-message = "Release {{tag_name}}"
pre-release-hook = ["git", "fetch", "--tags", "--quiet", "origin"]
