[package]
name = "x-api"
version = "6.0.0"
edition = "2024"
description = "X API client primitives for HTTP/auth/retry used by x CLI"
license = "MIT"

[lib]
name = "x_api"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
percent-encoding = "2"
reqwest = { version = "0.13.2", features = ["blocking", "form", "json"] }
ring = "0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
thiserror = "2.0.18"
